Ajout des classes du monde

--- a/Pokemon/Pokemon/Pokemon.vcxproj.filters
+++ b/Pokemon/Pokemon/Pokemon.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="CDrug.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="CTerrain.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="CWorld.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CAttaque.h">
@@ -92,5 +98,16 @@
     <ClInclude Include="CDrug.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="CTerrain.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="CWorld.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="player.pkmn">
+      <Filter>Fichiers sources</Filter>
+    </None>
   </ItemGroup>
 </Project>
