--- a/Pokemon/Pokemon/Pokemon.vcxproj
+++ b/Pokemon/Pokemon/Pokemon.vcxproj
@@ -28,9 +28,12 @@
     <ClCompile Include="CMonster.cpp" />
     <ClCompile Include="CObject.cpp" />
     <ClCompile Include="CPlant.cpp" />
+    <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CPotion.cpp" />
     <ClCompile Include="CRock.cpp" />
+    <ClCompile Include="CTerrain.cpp" />
     <ClCompile Include="CWater.cpp" />
+    <ClCompile Include="CWorld.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -43,9 +46,16 @@
     <ClInclude Include="CMonster.h" />
     <ClInclude Include="CObject.h" />
     <ClInclude Include="CPlant.h" />
+    <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CPotion.h" />
     <ClInclude Include="CRock.h" />
+    <ClInclude Include="CTerrain.h" />
     <ClInclude Include="CWater.h" />
+    <ClInclude Include="CWorld.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="player.pkmn" />
+    <None Include="terrain.pkmn" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
